new file:   event.css 	renamed:    divisi.html -> front-end/divisi.html 	new file:   front-end/event.html 	renamed:    index.html -> front-end/index.html 	renamed:    mhs-login.html -> front-end/mhs-login.html 	renamed:    profil.html -> front-end/profil.html 	renamed:    sign-up.html -> front-end/sign-up.html

--- a/front-end/divisi.html
+++ b/front-end/divisi.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="kostom.css">
+    <link rel="stylesheet" href="/kostom.css">
     <link rel="icon" type="image/x-icon" href="assets/logo_hmif.png">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -15,7 +15,7 @@
 <body>
 
     <div class="back-icon">
-        <a href="profil.html" class="back-link">
+        <a href="/front-end/profil.html" class="back-link">
             <i class="fas fa-arrow-left"></i> Kembali
         </a>
     </div>
@@ -42,7 +42,7 @@
     <div id="pemda">
         <section class="divisi container" id="divisi-pemda">
             <div class="divisi-left">
-                <img src="img/hm/Bulat Department/Kaderisasi.png" alt="Department Kaderisasi 2023">
+                <img src="/img/hm/Bulat Department/Kaderisasi.png" alt="Department Kaderisasi 2023">
                 <p>Department Kaderisasi 2023</p>
             </div>
             <div class="divisi-right">
@@ -75,12 +75,12 @@
             <h2>Anggota Department<span class="br">Kaderisasi</span> <span class="br">HMIF 2023</span></h2>
             <div class="org-structure-wrapper">
                 <div class="structure-card">
-                    <img src="img/hm/Kaderisasi/Wenda.png" alt="">
+                    <img src="/img/hm/Kaderisasi/Wenda.png" alt="">
                     <h3>Wenda</h3>
                     <p>Coordinator<br>(Angkatan 2021)</p>
                 </div>
                 <div class="structure-card">
-                    <img src="img/hm/Kaderisasi/Hendro.png" alt="">
+                    <img src="/img/hm/Kaderisasi/Hendro.png" alt="">
                     <h3>hendro</h3>
                     <p>Anggota<br>(Angkatan 2022)</p>
                 </div>
@@ -91,7 +91,7 @@
     <div class="hide" id="advo">
         <section class="divisi container" id="divisi-advo">
             <div class="divisi-left">
-                <img src="img/hm/Bulat Department/MediaInformasi.png" alt="">
+                <img src="/img/hm/Bulat Department/MediaInformasi.png" alt="">
                 <p>Department MediaInformasi 2023</p>
             </div>
             <div class="divisi-right">
@@ -207,7 +207,7 @@
     <div class="hide" id="organ">
         <section class="divisi container" id="divisi-organ">
             <div class="divisi-left">
-                <img src="img/hm/Bulat Department/MinatBakat.png" alt="">
+                <img src="/img/hm/Bulat Department/MinatBakat.png" alt="">
                 <p>Department MinatBakat 2023</p>
             </div>
             <div class="divisi-right">
@@ -312,7 +312,7 @@
     <div class="hide" id="kesek">
         <section class="divisi container" id="divisi-kesek">
             <div class="divisi-left">
-                <img src="img/hm/Bulat Department/KWU.png" alt="Divisi Kesekretariatan 2022">
+                <img src="/img/hm/Bulat Department/KWU.png" alt="Divisi Kesekretariatan 2022">
                 <p>Department Kewirausahaan 2023</p>
             </div>
             <div class="divisi-right">
@@ -345,7 +345,7 @@
 
             <div class="org-structure-wrapper">
                 <div class="structure-card">
-                    <img src="img/hm/Kewirausahaan/Felis.png" alt="">
+                    <img src="/img/hm/Kewirausahaan/Felis.png" alt="">
                     <h3>Felis</h3>
                     <p>Coordinator Kewirausahaan<br>(Angkatan 2022)</p>
                 </div>
@@ -353,12 +353,12 @@
 
             <div class="org-structure-wrapper">
                 <div class="structure-card">
-                    <img src="img/hm/Kewirausahaan/Enji.png" alt="">
+                    <img src="/img/hm/Kewirausahaan/Enji.png" alt="">
                     <h3>Enji</h3>
                     <p>Anggota Kewirausahaan<br>(Angkatan 2022)</p>
                 </div>
                 <div class="structure-card">
-                    <img src="img/hm/Kewirausahaan/Jelo.png" alt="">
+                    <img src="/img/hm/Kewirausahaan/Jelo.png" alt="">
                     <h3>Jelo</h3>
                     <p>Anggota Kewirausahaan<br>(Angkatan 2021)</p>
                 </div>
@@ -370,7 +370,7 @@
     <div class="hide" id="sosial">
         <section class="divisi container" id="divisi-organ">
             <div class="divisi-left">
-                <img src="img/hm/Bulat Department/MinatBakat.png" alt="">
+                <img src="/img/hm/Bulat Department/MinatBakat.png" alt="">
                 <p>Department Sosial 2023</p>
             </div>
             <div class="divisi-right">
