--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="/css/bootstrap.css">
 
   <!-- CSS Kel 12 -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 
   <title>Himpunan Mahasiswa Informatika</title>
 </head>
@@ -18,7 +18,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark nav-top navbar-shrink">
-    <a class="navbar-brand" href="index.html"><img width="200px" src="img/hm/logo_usd.png" alt="logo"></a>
+    <a class="navbar-brand" href="index.html"><img width="200px" src="/img/hm/logo_usd.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,11 +26,11 @@
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="profil.html">Kepengurusan</a>
-        <a class="nav-item nav-link" href="organisasi.html">Event</a>
-        <a class="nav-item nav-link" href="prodi.html">aspirasi</a>
-        <a class="nav-item btn tombol" href="mhs-login.html">LOGIN</a>
+        <a class="nav-item nav-link active" href="/front-end/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/front-end/profil.html">Kepengurusan</a>
+        <a class="nav-item nav-link" href="/front-end/event.html">Event</a>
+        <a class="nav-item nav-link" href="/front-end/prodi.html">aspirasi</a>
+        <a class="nav-item btn tombol" href="/front-end/mhs-login.html">LOGIN</a>
       </div>
     </div>
     </div>
@@ -233,7 +233,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-6">
-            <img class="footer-brand" src="img/hm/Logo HMIF remove remove.png" alt="Universitas AMIKOM Yogyakarta">
+            <img class="footer-brand" src="/img/hm/Logo HMIF remove remove.png" alt="Universitas AMIKOM Yogyakarta">
             <div class="alamat">
               <h6>UNIVERSITAS SANATA DHARMA</h6>
               <p>Jl. Paingan, Krodan, Maguwoharjo, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281</p>
