--- a/front-end/profil.html
+++ b/front-end/profil.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
 
   <!-- CSS Kel 12 -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="kostom.css">
-  <link rel="stylesheet" href="fa/css/all.css">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/kostom.css">
+  <link rel="stylesheet" href="/fa/css/all.css">
 
   <title>Kata Pengantar | Universitas SANATA DHARMA</title>
 </head>
@@ -20,7 +20,7 @@
 <body id="kel12">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark nav-top navbar-shrink nav-side">
-    <a class="navbar-brand" href="#"><img width="200px" src="img/hm/logo_usd.png" alt="logo"></a>
+    <a class="navbar-brand" href="#"><img width="200px" src="/img/hm/logo_usd.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -28,11 +28,11 @@
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="profil.html">Kepengurusan</a>
-        <a class="nav-item nav-link" href="organisasi.html">Event</a>
-        <a class="nav-item nav-link" href="prodi.html">aspirasi</a>
-        <a class="nav-item btn tombol" href="mhs-login.html">LOGIN</a>
+        <a class="nav-item nav-link active" href="/front-end/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/front-end/profil.html">Kepengurusan</a>
+        <a class="nav-item nav-link" href="/front-end/event.html">Event</a>
+        <a class="nav-item nav-link" href="/front-end/prodi.html">aspirasi</a>
+        <a class="nav-item btn tombol" href="/front-end/mhs-login.html">LOGIN</a>
       </div>
     </div>
     </div>
@@ -55,25 +55,25 @@
 
 
         <div class="structure-card">
-          <img src="img/hm/Bulat Panti&Kadep/Sasha.png" alt="">
+          <img src="/img/hm/Bulat Panti&Kadep/Sasha.png" alt="">
           <h3>Shasa</h3>
           <p>Sekretaris</p>
         </div>
 
         <div class="structure-card">
-          <img src="img/hm/Bulat Panti&Kadep/Yogtan.png" alt="">
+          <img src="/img/hm/Bulat Panti&Kadep/Yogtan.png" alt="">
           <h3>YOGTAN</h3>
           <p>Ketua</p>
         </div>
 
         <div class="structure-card">
-          <img src="img/hm/Bulat Panti&Kadep/Cinta.png" alt="">
+          <img src="/img/hm/Bulat Panti&Kadep/Cinta.png" alt="">
           <h3>Cinta</h3>
           <p>Wakil</p>
         </div>
 
         <div class="structure-card">
-          <img src="img/hm/Bulat Panti&Kadep/Elvina.png" alt="">
+          <img src="/img/hm/Bulat Panti&Kadep/Elvina.png" alt="">
           <h3>Elvina</h3>
           <p>Bendahara</p>
         </div>
@@ -83,31 +83,31 @@
       <div class="title">Kepala Department</div>
       <div class="org-structure-wrapper ">
         <div class="structure-card structure-card-co">
-          <img src="img/hm/Bulat Panti&Kadep/Jesly.png" alt="">
+          <img src="/img/hm/Bulat Panti&Kadep/Jesly.png" alt="">
           <h3>Jesly</h3>
           <p>Media Informasi</p>
         </div>
 
         <div class="structure-card structure-card-co">
-          <img src="img/hm/Bulat Panti&Kadep/Wenda.png" alt="">
+          <img src="/img/hm/Bulat Panti&Kadep/Wenda.png" alt="">
           <h3>Wenda</h3>
           <p>Kaderisasi</p>
         </div>
 
         <div class="structure-card structure-card-co">
-          <img src="img/hm/Bulat Panti&Kadep/Ardi.png" alt="">
+          <img src="/img/hm/Bulat Panti&Kadep/Ardi.png" alt="">
           <h3>Ardi</h3>
           <p>Sosial</p>
         </div>
 
         <div class="structure-card structure-card-co">
-          <img src="img/hm/Bulat Panti&Kadep/Tyas.png" alt="">
+          <img src="/img/hm/Bulat Panti&Kadep/Tyas.png" alt="">
           <h3>Tyas</h3>
           <p>Minat Bakat</p>
         </div>
 
         <div class="structure-card structure-card-co">
-          <img src="img/hm/Bulat Panti&Kadep/Felis.png" alt="">
+          <img src="/img/hm/Bulat Panti&Kadep/Felis.png" alt="">
           <h3>Felis</h3>
           <p>Kewirausahaan</p>
         </div>
@@ -120,17 +120,17 @@
 
 
         <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
-          <img src="img/hm/Bulat Department/Kaderisasi.png" alt="">
+          <img src="/img/hm/Bulat Department/Kaderisasi.png" alt="">
           <h3>Divisi Kaderisasi</h3>
         </div>
 
         <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
-          <img src="img/hm/Bulat Department/MinatBakat.png" alt="">
+          <img src="/img/hm/Bulat Department/MinatBakat.png" alt="">
           <h3>Divisi MinatBakat</h3>
         </div>
 
         <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
-          <img src="img/hm/Bulat Department/MediaInformasi.png" alt="">
+          <img src="/img/hm/Bulat Department/MediaInformasi.png" alt="">
           <h3>Divisi MediaInformasi</h3>
         </div>
       </div>
@@ -140,12 +140,12 @@
       <div class="org-structure-wrapper">
 
         <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
-          <img src="img/hm/Bulat Department/Sosial.png" alt="">
+          <img src="/img/hm/Bulat Department/Sosial.png" alt="">
           <h3>Divisi Sosial</h3>
         </div>
 
         <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
-          <img src="img/hm/Bulat Department/KWU.png" alt="">
+          <img src="/img/hm/Bulat Department/KWU.png" alt="">
           <h3>Divisi Kewirausahaan</h3>
         </div>
 
@@ -160,7 +160,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-6">
-            <img class="footer-brand" src="img/hm/Logo HMIF remove remove.png" alt="Universitas AMIKOM Yogyakarta">
+            <img class="footer-brand" src="/img/hm/Logo HMIF remove remove.png" alt="">
             <div class="alamat">
               <h6>UNIVERSITAS SANATA DHARMA</h6>
               <p>Jl. Paingan, Krodan, Maguwoharjo, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281</p>
