modified:   event.css 	modified:   front-end/event.html 	modified:   front-end/index.html 	new file:   img/hm/EventHMIF/Desain_tanpa_judul-removebg-preview.png 	new file:   img/hm/EventHMIF/LOGOIASD.jpg 	new file:   img/hm/EventHMIF/LOGOPORSI (1) (1).png 	new file:   img/hm/EventHMIF/Logo IF Belajar.png 	new file:   img/hm/EventHMIF/Logo IT Days Ver2 (2).png 	new file:   img/hm/EventHMIF/Logo IT Days Ver2.png 	new file:   img/hm/EventHMIF/Logo IT Days.jpg 	new file:   img/hm/Gambar WhatsApp.jpg 	new file:   img/hm/Gambar_WhatsApp-removebg-preview.png 	deleted:    img/hm/Logo HMIF.jpg 	new file:   img/hm/LogoHMIF.png

--- a/front-end/event.html
+++ b/front-end/event.html
@@ -7,11 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/bootstrap.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <!-- CSS Kel 12 -->
     <link rel="stylesheet" href="../css/event.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../event.css">
 
 
     <title>Events | HMIF USD</title>
@@ -20,7 +21,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#"><img width="200px" src="../img/hm/logo_usd.png" alt="logo"></a>
+      <a class="navbar-brand" href="#"><img width="200px" src="/img/hm/logo_usd.png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,7 +56,7 @@
               <h1 id="jumbKegiatan">KEGIATAN</h1>
               <h1 id="jumbOrganisasi" >ORGANISASI</h1>
             </div>
-            <img src="../img/LogoHMIF.png" width="200" alt="LogoHMIF">
+            <img src="/img/hm/LogoHMIF.png" width="200" alt="LogoHMIF">
           </div>
     </div>
     
@@ -68,16 +69,16 @@
       <div class="" >
         <div class="row d-flex justify-content-center align-items-center "id="logoEvent">
           <div class="col">
-           <a href="#contents" id="porsi"><img src="../img/EventHMIF/LOGOPORSI (1) (1).png" alt="Logo Porsi" class="logoKegiatan"></a>
+           <a href="#contents" id="porsi"><img src="/img/hm/EventHMIF/LOGOPORSI (1) (1).png" alt="Logo Porsi" class="logoKegiatan"></a>
           </div>
           <div class="col ">
-           <a href="#contents" id="iasd"><img src="../img/EventHMIF/Desain_tanpa_judul-removebg-preview.png" alt="Logo IASD" class="logoKegiatan"></a>
+           <a href="#contents" id="iasd"><img src="/img/hm/EventHMIF/Desain_tanpa_judul-removebg-preview.png" alt="Logo IASD" class="logoKegiatan"></a>
           </div>
           <div class="col ">
-           <a href="#contents" id="ifb"><img src="../img/EventHMIF/Logo IF Belajar.png" alt="Logo IF Belajar" class="logoKegiatan"></a>
+           <a href="#contents" id="ifb"><img src="/img/hm/EventHMIF/Logo IF Belajar.png" alt="Logo IF Belajar" class="logoKegiatan"></a>
           </div>
           <div class="col">
-           <a href="#contents" id="itdays"><img src="../img/EventHMIF/Logo IT Days Ver2.png" alt="Logo ITDays" class="logoKegiatan"></a>
+           <a href="#contents" id="itdays"><img src="/img/hm/EventHMIF/Logo IT Days Ver2.png" alt="Logo ITDays" class="logoKegiatan"></a>
           </div>
         </div>
       </div>
@@ -282,7 +283,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-6">
-            <img class="footer-brand" src="../img/hm/Logo HMIF remove remove.png" alt="Universitas AMIKOM Yogyakarta">
+            <img class="footer-brand" src="" alt="Universitas  SANATA DHARMA">
             <div class="alamat">
               <h6>UNIVERSITAS SANATA DHARMA</h6>
               <p>Jl. Paingan, Krodan, Maguwoharjo, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281</p>
