--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/bootstrap.css">
 
   <!-- CSS Kel 12 -->
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="coba.css">
 
 
